frontend/test/should_pass/edge_model_009.gm
arbitrary edge class A extends AEdge;
