frontend/test/should_fail/edge_model_008.gm
arbitrary edge class A extends Edge;